[package]
name = "od_ref_bot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OpenDreamProject/od-dm-reference/"
license = "MIT"

[dependencies]
log = "0.4.22"
poise = "0.6.1"
regex = "1.11.1"
serde = "1.0.215"
tantivy = "0.22.0"
tempfile = "3.14.0"
tokio = {version = "1.41.1", features = ["rt-multi-thread"]}
toml = "0.8.19"
